--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
         <title>JE Financial Services</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <style>
+          body, html {
+            height: 100%;
+        }
+       .parallax {
+  /* The image used */
+        background-image: url('img_parallax.jpg');
+
+  /* Full height */
+        height: 100%; 
+
+  /* Create the parallax scrolling effect */
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        }
+        </style>
     </head>
     <body>
     	<header>
