--- a/index.html
+++ b/index.html
@@ -27,16 +27,12 @@
         </style>
     </head>
     <body>
-    	<header>
-    	</header>
-    	<main>
-        <section>
-        </section>
-            <div>   
-            </div>
-            <footer>
-              
-            </footer>
-        </main>
+    	<div class="parallax"></div>
+
+        <div style="height:1000px;background-color:red;font-size:36px">
+
+        </div>
+
+        <div class="parallax"></div>
     </body>
 </html>
